syntax = "proto3";

//option csharp_namespace = "Server";
import "google/protobuf/empty.proto";
package progress;

service Progressor{
   rpc RunHistory (google.protobuf.Empty) returns (stream HistoryResponse);

}

message HistoryResponse{
    oneof ResponseType {
      int32 progress = 1;
      HistoryResult result = 2;
	}

}

message HistoryResult{
    repeated string items = 1;
}



